--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "migrate:down": "knex migrate:down",
+    "migrate:rollback": "knex migrate:rollback",
+    "db:migrate": "knex migrate:latest",
+    "db:seed": "knex seed:run",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.0.1",
     "mysql2": "^3.6.5",
+    "nodemon": "^3.0.2",
     "winston": "^3.11.0"
   }
 }
